[package]
name = "hannibal"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/estchd/hannibal/"
description = "DFA based Lexer written in Rust."
license = "LICENSE"
readme = "README.md"
keywords = ["lexer", "dfa"]
categories = ["parsing", "compilers"]

[dependencies]
utf8-read = "0.4.0"
thiserror = "2.0.18"

[lints.clippy]
cargo = "warn"
pedantic = "warn"
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arbitrary_source_item_ordering = "warn"
